--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- <header class="site-header">
                 <div class="container">
                     <div class="row"> -->
-            <a href="#!" class="brand-logo">Сайт</a>
+            <a href="#!" class="brand-logo">Logo</a>
 
             <ul class="right hide-on-med-and-down">
                 <!-- <div class="col l2"> -->
