--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- <header class="site-header">
                 <div class="container">
                     <div class="row"> -->
-            <a href="#!" class="brand-logo">Logo</a>
+            <a href="http://mysayt/registracia/regBD/mi-registration/" class="brand-logo">Logo</a>
 
             <ul class="right hide-on-med-and-down">
                 <!-- <div class="col l2"> -->
@@ -121,30 +121,27 @@
             <button class="modal-pro-close btn-floating waves-effect waves-light #4db6ac teal lighten-2"><i class="material-icons">close</i></button>
         </div>
     </div>
-    <div class="CenterBlockExForm">
-        <div class="CenterBlock">
-            <div id="dle-content">
-                <div class="MiniPostAllForm MiniPostAllFormDop">
-                    <div class="MiniPost">
+
+    <div class="cardy"></div>
+
+    <!-- <div class="MiniPost">
                         <a href="#!" class="MiniPostPoster">
                             <div id="artist-img">
                             </div>
                         </a>
-                    </div>
-                    <div class="MiniPostName">
+                    </div> -->
+    <!-- <div class="MiniPostName">
                         <a href="#!" title="Эдди Мёрфи" id="artist-name"></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
+                    </div> -->
 
-<script src="script/materialize.min.js"></script>
-<script src="js/ajax.js"></script>
-<script src="js/form.js"></script>
-<script src="js/main.js"></script>
-<script src="js/artist.js"></script>
+
+    <script src="script/materialize.min.js"></script>
+
+    <script src="js/ajax.js"></script>
+    <script src="js/form.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/artist.js"></script>
+
 </body>
 
 </html>
