--- a/biografi.html
+++ b/biografi.html
@@ -33,12 +33,24 @@
             </header> -->
         </div>
     </nav>
-    <div class="outBio"></div>
-    <p class="out"></p>
+    <div class="container">
 
+        <form name="znak_zodiac">
+            <input type="hidden" name="znak" size=15>
+        </form>
+        <div class="naVi">
+            <a href="index.html">Назад</a>
+        </div>
+        <div class="zadiac"></div>
+        <div class="outBio"></div>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="script/materialize.min.js"></script>
     <script src="js/ajax.js"></script>
     <script src="js/biografi.js"></script>
+    <script src="js/astrologi.js"></script>
+    <!-- <script type="text/javascript" src="js/astrologi.json"></script> -->
 </body>
 
 </html>
